--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "google"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,6 +34,14 @@
   },
   "devDependencies": {
     "eslint": "^7.16.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
